# SMS_Assignment1

./: README.md  python.py
BuddyBot/: Readme.md
BuddyBot/Car_Speed_Monitoring/devel/: .catkin  setup.sh
BuddyBot/Home_Control/devel/: .catkin  _setup_util.py
BuddyBot/WeatherWise/devel/: .catkin
Final_Assignment/week3_lab/: file_ops.sh
Final_Assignment/week_13_lab/: analyze_logs.sh  archive_files.sh  file_creators.py  log_output.txt
Final_Assignment/week_14_lab/: create_file.py  file_cretor.py  lab_14.sh
Final_Assignment/week_14_lab/sub_directory/: my_file.txt
Final_Assignment/week_7_lab/: file_list.txt  get_date.sh  redirect_output.sh
Final_Project/WeatherWise/devel/: .catkin  .rosinstall  setup.sh
Homework1/: README.md
Homework1/devel/: .catkin  local_setup.sh  setup.sh
Homework1/src/Homework1/: CMakeLists.txt
Homework2/: .README.swp  README.md  speed
Homework3/: python.txt
Homework3/catkin_ws/: README.md
Homework4/: Readme.md
Homework4/devel/: .catkin  local_setup.sh  setup.sh
Homework4/src/Homework4/: CMakeLists.txt  package.xml
Homework4/src/Homework4/launch/: rpm_sim.launch  speed_sim.launch
Homework4/src/Homework4/src/: rpm_pub.py  service_client.py  service_server.py  speed_calc.py
MidTerm_Project_Final/devel/: .catkin
MidTerm_Project_Final/src/MidTerm_Project_Final/: CMakeLists.txt  package.xml
MidtermProject/my_city_ws/: Readme.md  Readme.rm
MidtermProject/my_city_ws/devel/: .catkin  .rosinstall
h/Homework3/devel/: .catkin  (+1 more)
project7/: README.md  keys  keys.pub
project7/devel/: .catkin  local_setup.sh
(+268 files in other folders)
